add form addAdmin

--- a/src/odisVendorBundle/Resources/config/routing.yml
+++ b/src/odisVendorBundle/Resources/config/routing.yml
@@ -23,3 +23,7 @@ vendorEdit:
 vendorsaveEdit:
     path:     /vendorsaveEdit
     defaults: { _controller: odisVendorBundle:Default:vendorsaveEdit }
+
+addAdmin:
+    path:     /addAdmin
+    defaults: { _controller: odisVendorBundle:Default:addAdmin }
