--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -4,16 +4,16 @@
 parameters:
     database_host: 127.0.0.1
     database_port: ~
-    database_name: symfony
+    database_name: todolist
     database_user: root
-    database_password: ~
+    database_password: tcxx!Qf|
     # You should uncomment this if you want to use pdo_sqlite
     #database_path: '%kernel.root_dir%/../var/data/data.sqlite'
 
     mailer_transport: smtp
     mailer_host: 127.0.0.1
-    mailer_user: ~
-    mailer_password: ~
+    mailer_user: admin@odis.pro
+    mailer_password: admin
 
     # A secret key that's used to generate certain security-related tokens
-    secret: ThisTokenIsNotSoSecretChangeIt
+    secret: 4be38179afbdb46a5e8c6ce281f7cf270689d467
